[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vin_decoder_nhtsa"
version = "0.0.2"
authors = [
  { name="Alex Conrey", email="alex@conrey.engineering" },
]
description = "Python module for decoding VIN metadata from NHTSA API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/conrey-engineering/python_vin_decoder_nhtsa"
"Bug Tracker" = "https://github.com/conrey-engineering/python_vin_decoder_nhtsa/issues"